[package]
name = "stream-reconnect"
version = "0.4.0-beta.4"
authors = ["David Raifaizen <david.raifaizen@protonmail.com>", "LightQuantum <self@lightquantum.me>"]
edition = "2018"
description = "Stream-wrapping traits/structs that automatically recover from potential disconnections/interruptions."
license = "MIT"
keywords = ["reconnect", "retry", "stream", "io"]
repository = "https://github.com/PhotonQuantum/stream-reconnect"
readme = "README.md"
exclude = [
    ".github/*",
    ".gitignore",
    ".mergify.yml",
    "rust-toolchain.toml"
]

[features]
default = ["tokio"]
not-send = []

[dependencies]
tokio = { version = "1", features = ["time"], optional = true }
async-std = { version = "1", optional = true }
log = "0.4"
rand = "0.8"
futures = "0.3"
tokio-tungstenite = "0.26"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync"] }
futures = "0.3"
tokio-websockets = { version = "0.13.1", features = ["server", "native-tls", "sha1_smol"] }
tokio-native-tls = "0.3.0"


[[example]]
name = "reconnect-websocket-demo"
path = "examples/reconnect-websocket-demo.rs"
test = true